k8/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-boilerplate
spec:
  replicas: 2
  selector:
    matchLabels:
      app: node-boilerplate
  template:
    metadata:
      labels:
        app: node-boilerplate
    spec:
      containers:
        - name: node-boilerplate
          image: "buildablecr0.azurecr.io/node-boilerplate"
          ports:
            - containerPort: 3000
