k8/service.yml
apiVersion: v1
kind: Service
metadata:
  name: node-boilerplate
  labels:
    app: node-boilerplate
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: node-boilerplate
