k8/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-boilerplate-ingress
  labels:
    app: node-boilerplate
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: letsencrypt-staging
spec:
  tls:
    - hosts:
        - node-boiler.teaguestockwell.com
      secretName: tls-secret
  rules:
    - host: node-boiler.teaguestockwell.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: node-boilerplate
                port:
                  number: 3000
